adds svg as img and a simple svg example

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <h1>Scalable Vector Graphics</h1>
-    
+
+    <!-- Method 2: Writing SVG Code inside HTML -->
+    <svg class="dice" width="200" height="300" viewBox="0 0 200 300">
+      <rect x="0" y="0" width="200" height="200" fill="aquamarine" rx="8" ry="8"/>          
+    </svg>
+
+    <!-- Method 1 for Displaying SVG in an HTML file -->
+    <!-- Inserting the .svg file into a <img> tag -->
+    <img class="smily1" src="img/smily.svg" alt="A smily face">
 </body>
 </html>
