--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
 <body>
     <h1>Scalable Vector Graphics</h1>
 
-    <!-- Method 2: Writing SVG Code inside HTML -->
     <svg class="dice" width="200" height="300" viewBox="0 0 200 300">
+        <rect x="0" y="0" width="200" height="200" fill="aquamarine" rx="8" ry="8"/>
+        <circle class="dot" cx="50" cy="50" r="25" fill="darkblue"/>
+        <circle class="dot"  cx="150" cy="50" r="25" fill="darkblue"/>
+        <circle class="dot" cx="150" cy="150" r="25" fill="darkblue"/>
+        <circle class="dot" cx="50" cy="150" r="25" fill="darkblue"/>
+    </svg>
+
+    <svg class="dice" width="200" height="300" viewBox="0 0 200 300">
+        <rect x="0" y="0" width="200" height="200" fill="aquamarine" rx="8" ry="8"/>
+        <circle class="dot" cx="50" cy="50" r="25" fill="darkblue"/>
+        <circle class="dot"  cx="150" cy="50" r="25" fill="darkblue"/>
+        <circle class="dot" cx="150" cy="150" r="25" fill="darkblue"/>
+        <circle class="dot" cx="50" cy="150" r="25" fill="darkblue"/>
+        <circle class="dot" cx="100" cy="100" r="25" fill="darkblue"/>
+    </svg>
+    <br>
+    <!-- Method 2: Writing SVG Code inside HTML -->
+    <svg class="dice1" width="200" height="300" viewBox="0 0 200 300">
         <rect x="0" y="0" width="200" height="200" fill="aquamarine" rx="8" ry="8"/>
         <circle cx="50" cy="50" r="25" fill="darkblue"/>
         <ellipse cx="200" cy="50" rx="150" ry="25" fill="aquamarine"/>
@@ -29,7 +46,6 @@
     <svg width="60" height="60" viewBox="0 0 60 60">
         <polygon 
             points="0,20 20,20 30,0 40,20 60,20 40,35 60,60 30,45 0,60 20,35" fill="#b6e2ff"/>
-
     </svg>
 
     
