--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <body>
     <h1>Scalable Vector Graphics</h1>
 
+    <svg width="300" height="200" viewBox="0 0 300 200">
+        <defs>
+            <rect id="brick" width="200" height="100" fill="#cfbee1"/>
+            <circle id="ball" r="50" fill="#8cc9bb"/>
+        </defs>
+        <use xlink:href="#brick" />
+        <use xlink:href="#ball" x="200" y="50" />
+        <use xlink:href="#brick" x="50" y="100" />
+        <use xlink:href="#ball" x="50" y="150" />
+    </svg>
+    <br>
     <svg class="dice" width="200" height="300" viewBox="0 0 200 300">
         <rect x="0" y="0" width="200" height="200" fill="aquamarine" rx="8" ry="8"/>
         <circle class="dot" cx="50" cy="50" r="25" fill="darkblue"/>
